<resources>
    <string name="app_name">PinMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_payment">Payment</string>
    <string name="title_chat">Chat</string>
    <string name="title_story">Stories</string>
    <string name="send_money">Send Money</string>
    <string name="pln">PLN Token</string>
    <string name="invoice">Create Invoice</string>
    <string name="transfer_to_bank">Withdraw to Bank</string>
    <string name="scan_qr">Scan to Pay</string>
    <string name="request_money">Request Money</string>
    <string name="create_product">Create Product</string>
    <string name="new_agent">Agent Registration</string>
    <string name="top_up">Top Up</string>
    <string name="view_all">VIEW ALL " >"</string>
    <string name="digital_payment">Digital Payment</string>
    <string name="cellular">Pulsa Seluler</string>
    <string name="data_package">Data Package</string>
    <string name="postpaid">Postpaid</string>
    <string name="bpjs">BPJS</string>
    <string name="cable_tv">Cable TV</string>
    <string name="insurance">Insurance</string>
    <string name="donation">Donation</string>
    <string name="title_activity_send_money">Send Money</string>
    <string name="recipient">Send Money to</string>
    <string name="send_money_amount">Send Money amount</string>
    <string name="hint_recipient">Tap to Select demo app Contact</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="title_activity_contact">Contact List</string>
    <string name="title_activity_celullar">Pulsa / Data Seluler</string>
    <string name="pulsa">Top Up</string>
    <string name="paket_data">Paket Data</string>
    <string name="hint_pulsa">Select Top Up Amount</string>
    <string name="hint_data">Select Data Plan</string>
    <string name="title_activity_pln">PLN</string>
    <string name="pln_hint_id">Input PLN Meter Number</string>
    <string name="name">Name</string>
    <string name="customer_id">Customer ID</string>
    <string name="meter_number">PLN Meter Number</string>
    <string name="title_activity_invoice">Invoice</string>
    <string name="select_bank">Select Bank</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="hint_bank_account_number">Input Bank Account Number</string>
    <string name="optional_message">Message (Optional)</string>
    <string name="hint_optional_message">Input Message (Optional)</string>
    <string name="title_activity_withdraw">Withdraw to Bank</string>
    <string name="hint_amount">Input Amount</string>
    <string name="amount">Amount</string>
    <string name="info_withdraw">Withdraw you app balance to bank account</string>
    <string name="title_activity_qr">Scan to Pay</string>
    <string name="item_description">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="title_activity_product">Create Product</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="product_list">Product</string>
    <string name="bill_list">Bill</string>
    <string name="add_new_product">Add New Product</string>
    <string name="invalid_product">Please input item name and item price.</string>
    <string name="title_activity_product_qr">Product QR</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="delete_product">Delete Product</string>
    <string name="title_activity_bill">Bill</string>
    <string name="total">Total</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Subtotal</string>
    <string name="qty">Qty</string>
    <string name="product">Product</string>
    <string name="bill_id">Bill ID : </string>
    <string name="title_activity_top_up">Top Up</string>
    <string name="manual_transfer">Manual Transfer</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="top_up_hint">Select top up source</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="virtual_account_number">Virtual Account Number</string>
    <string name="please_transfer">Please Transfer</string>
    <string name="before">Before</string>
    <string name="hint_atm1_bni">
        1. Masukkan kartu ATM &amp; PIN BNI &lt;br&gt;
        2. Pilih menu &lt;font color=\'#0000ff\'&gt;MENU LAINNYA &amp;gt; TRANSFER &amp;gt; TABUNGAN &amp;gt; REKENING BNI VIRTUAL ACCOUNT&lt;/font&gt;&lt;br&gt;
        3. Masukkan nomor rekening BNI VIRTUAL ACCOUNT (12345678)&lt;br&gt;
        4. Masukkan nominal yang akan ditopup&lt;br&gt;
        5. Ikuti instruksi untuk menyelesaikan transaksi
    </string>
    <string name="hint_atm1_mandiri">
        1. Masukkan kartu ATM &amp; PIN Bank Mandiri &lt;br&gt;
        2. Pilih menu &lt;font color=\'#0000ff\'&gt;MENU LAINNYA &amp;gt; TRANSFER &amp;gt; TABUNGAN &amp;gt; REKENING MANDIRI VIRTUAL ACCOUNT&lt;/font&gt;&lt;br&gt;
        3. Masukkan nomor rekening MANDIRI VIRTUAL ACCOUNT (12345678)&lt;br&gt;
        4. Masukkan nominal yang akan ditopup&lt;br&gt;
        5. Ikuti instruksi untuk menyelesaikan transaksi
    </string>
    <string name="hint_bank_acc_bca">123-456-789</string>
    <string name="hint_bank_acc_dummy">12345678</string>
    <string name="hint_manual1">&lt;b&gt;*Mohon transfer sesuai jumlah yang tertera (tidak lebih atau kurang).&lt;/b&gt;
        Jumlah transfer telah kami tambahkan dengan &lt;b&gt;%var1%&lt;/b&gt; untuk memperoleh angka unik.
        Kamu tetap akan menerima jumlah sesuai yang ditransfer.
    </string>
    <string name="hint_manual2">Saldo kamu akan bertambah beberapa saat setelah transfer berhasil.
        Transfer melalui bank yang berbeda bisa dikenakan biaya tambahan (biaya transfer antar bank).
        Transfer setelah pukul &lt;b&gt;21:00 WIB&lt;/b&gt; akan diproses di hari berikutnya.
    </string>
    <string name="currency">Rp</string>
    <string name="manual_transfer_amount">Amount (Manual Transfer)</string>
    <string name="hint_min_topup">Min Rp. 10.000</string>
    <string name="title_activity_trx">Transaction</string>
    <string name="message">Message</string>
    <string name="status">Status</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="date">Date</string>
    <string name="invalid_amount">Invalid amount!</string>
    <string name="top_user">Top Users</string>
    <string name="storage_permission_denied_message">Storage</string>
    <string name="title_activity_people">PeopleActivity</string>
    <string name="action_follow">Follow</string>
</resources>