<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_padding"
    android:paddingRight="@dimen/activity_padding"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/activity_padding"
        >
        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bank_bni"
            />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textTitle"
            android:text="BNI Virtual Account"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_holder_name"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/activity_view_double_vspacing"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PT Aplikasi Demo"
        android:textColor="@android:color/black"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_account_number"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/activity_view_double_vspacing"/>

    <TextView
        android:id="@+id/textBankAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/activity_view_double_vspacing"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_transfer"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/activity_view_double_vspacing"
        />
    <TextView
        android:id="@+id/textAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="-"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textExpired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/before"
        />

    <TextView
        android:id="@+id/textHint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/hint_manual1"
        android:textColor="@color/grey_800"
        />

    <TextView
        android:id="@+id/textHint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/hint_manual2"
        android:textColor="@color/colorPrimary"
        />
</LinearLayout>