<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    >
    <android.support.v7.widget.CardView
        android:id="@+id/cardBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="0dp"
        app:cardCornerRadius="2dp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        style="@android:style/Widget.Holo.Light.Spinner"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_card_spinner"
            >
            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_bank_bca"
                android:layout_marginRight="@dimen/activity_view_vspacing"
                />
            <ImageView
                android:id="@+id/imageNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_chevron_right_24dp"
                android:tint="@android:color/secondary_text_light"
                />
            <TextView
                android:id="@+id/textBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:minLines="2"
                android:gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/imageNext"
                android:layout_toRightOf="@id/imageIcon"
                android:textColor="@android:color/black"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_marginTop="@dimen/activity_view_double_vspacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardBank"
        android:layout_alignParentLeft="true"
        android:id="@+id/text_label1"
        android:text="@string/bank_account_number"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/editAccNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label1"
        android:hint="@string/hint_bank_account_number"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_marginTop="@dimen/activity_view_double_vspacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editAccNumber"
        android:layout_alignParentLeft="true"
        android:id="@+id/text_label2"
        android:text="@string/amount"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label2"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        />



    <TextView
        android:layout_marginTop="@dimen/activity_view_double_vspacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editAmount"
        android:layout_alignParentLeft="true"
        android:id="@+id/text_label3"
        android:text="@string/optional_message"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/editMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label3"
        android:hint="@string/hint_optional_message"
        android:inputType="text"
        />
</RelativeLayout>