<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="16dp">
    <LinearLayout
        android:id="@+id/layoutQr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/textBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bill ID : 1234"
            />
        <ImageView
            android:id="@+id/imageQr"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_pln"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text"
        android:text="@string/qty"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/layoutQr"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:gravity="right"
        android:paddingRight="8dp"
        />
    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text"
        android:text="@string/total"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layoutQr"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text"
        android:text="@string/product"
        android:layout_toRightOf="@id/textQuantity"
        android:layout_toLeftOf="@id/textTotal"
        android:layout_below="@id/layoutQr"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginRight="24dp"
        />
</RelativeLayout>