<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_padding"
    >
    <TextView
        android:id="@+id/text_label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/manual_transfer_amount"
        android:textColor="@android:color/black"
    />
    <TextView
        android:id="@+id/text_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        app:layout_constraintTop_toTopOf="@id/editAmount"
        app:layout_constraintBottom_toBottomOf="@id/editAmount"
        android:gravity="center"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label1"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_toLeftOf="@id/text_label2"
        android:layout_toStartOf="@id/text_label2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/text_label2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_label2"
        app:layout_constraintTop_toBottomOf="@+id/text_label1"
        android:hint="@string/hint_min_topup"
        android:inputType="numberDecimal"
        />
    <Button
        android:id="@+id/buttonCancel"
        app:layout_constraintHorizontal_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonOk"
        app:layout_constraintTop_toBottomOf="@id/editAmount"
        android:text="@android:string/cancel"
        />
    <Button
        android:id="@+id/buttonOk"
        app:layout_constraintHorizontal_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/buttonCancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAmount"
        android:text="@android:string/ok"
        />
</android.support.constraint.ConstraintLayout>