<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/text_label1"
        android:text="@string/name"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label1"
        android:layout_alignParentLeft="true"
        android:text="Nama"
        android:textStyle="bold"
        android:id="@+id/textName"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_marginTop="@dimen/activity_view_double_vspacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:layout_alignParentLeft="true"
        android:id="@+id/text_label2"
        android:text="@string/customer_id"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label2"
        android:layout_alignParentLeft="true"
        android:text="1234512345"
        android:textStyle="bold"
        android:id="@+id/textCustomerId"
        android:textColor="@android:color/black"
        />


    <TextView
        android:layout_marginTop="@dimen/activity_view_double_vspacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCustomerId"
        android:layout_alignParentLeft="true"
        android:id="@+id/text_label3"
        android:text="@string/meter_number"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label3"
        android:layout_alignParentLeft="true"
        android:text="1234512345"
        android:textStyle="bold"
        android:id="@+id/textMeterNo"
        android:textColor="@android:color/black"
        />


    <TextView
        android:layout_marginTop="@dimen/activity_view_double_vspacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textMeterNo"
        android:layout_alignParentLeft="true"
        android:id="@+id/text_label4"
        android:text="@string/remaining_balance"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label4"
        android:layout_alignParentLeft="true"
        android:text="0"
        android:textStyle="bold"
        android:id="@+id/textBalance"
        android:textColor="@android:color/black"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/cardProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="0dp"
        app:cardCornerRadius="2dp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="@dimen/activity_view_double_vspacing"
        android:layout_below="@id/textBalance"
        android:layout_alignParentLeft="true"
        style="@android:style/Widget.Holo.Light.Spinner"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_card_spinner"
            >
            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_pln"
                android:layout_marginRight="@dimen/activity_view_vspacing"
                />
            <ImageView
                android:id="@+id/imageNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_chevron_right_24dp"
                android:tint="@android:color/secondary_text_light"
                />
            <TextView
                android:id="@+id/textHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_pulsa"
                android:minLines="2"
                android:gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/imageNext"
                android:layout_toRightOf="@id/imageIcon"
                android:textColor="@color/grey_500"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>